--- a/index.html
+++ b/index.html
@@ -15,22 +15,16 @@
     <header class="fs-1 mt-5 justify-content-center text-center">
         Weather App
     </header>
-    <div class="container-fluid h-50 mt-5">
+    <div class="container h-50 mt-5">
     <div class="row justify-content-center text-center">
         <form class="col-6 py-5 fs-3 border rounded-5" style="background-color: #ffcae9;">
-        <input class="border rounded-5" type="text" id="cityInput" placeholder=" Enter City Name">
+        <input class="col-12 border rounded-5 justify-content-center " type="text" id="cityInput" placeholder="Enter City Name">
         <button class="border rounded-5" id="searchButton">Search</button>
-    </form>
-</div>
- </div>
- <div class="container" id="weatherContainer">
-<div class="row justify-content-center mt-5">
-    <div class="col-3"></div>
-    <div class="col-6">
-      <!-- Weather information will be here -->  
+        </form>
     </div>
+    </div>
+ <div class="container" id="weatherContainer">
+   <!-- Weather information will be here -->  
 </div>
- </div>
- <script src="./script.js"></script>
 </body>
 </html>
